--- a/src/_locales/he/messages.json
+++ b/src/_locales/he/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "SciGPT"
+    "message": "SciBard"
   },
   "appDesc": {
     "message": "לסיכום ולספק הבעות מרכזיות לכל מאמר"
