--- a/src/_locales/ko/messages.json
+++ b/src/_locales/ko/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "SciGPT"
+    "message": "SciBard"
   },
   "appDesc": {
     "message": "ChatGPT로 Arxiv논문의 인사이트를 제공합니다."
