--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "SciGPT"
+    "message": "SciBard"
   },
   "appDesc": {
     "message": "Суммировать и предоставлять ключевые взгляды для любой статьи"
