--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "SciGPT"
+    "message": "SciBard"
   },
   "appDesc": {
     "message": "Fassen Sie ein Papier zusammen und liefern Sie wichtige Erkenntnisse."
