--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "SciGPT"
+    "message": "SciBard"
   },
   "appDesc": {
     "message": "Resumir y proporcionar perspectivas clave para un artículo."
