--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "SciGPT"
+    "message": "SciBard"
   },
   "appDesc": {
     "message": "Résumer et fournir des éclairages clés pour un article."
