--- a/src/_locales/hu/messages.json
+++ b/src/_locales/hu/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "SciGPT"
+    "message": "SciBard"
   },
   "appDesc": {
     "message": "Összegzés és kulcsfontosságú betekintések bármely cikkre"
