--- a/src/_locales/pt_PT/messages.json
+++ b/src/_locales/pt_PT/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "SciGPT"
+    "message": "SciBard"
   },
   "appDesc": {
     "message": "Resumir e fornecer insights-chave para qualquer artigo"
