--- a/src/_locales/ro/messages.json
+++ b/src/_locales/ro/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "SciGPT"
+    "message": "SciBard"
   },
   "appDesc": {
     "message": "Rezumați și oferiți perspectivă cheie pentru orice articol arxiv"
