--- a/src/_locales/uk/messages.json
+++ b/src/_locales/uk/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "SciGPT"
+    "message": "SciBard"
   },
   "appDesc": {
     "message": "Загальний опис та важливі враження для будь-якої статті"
