--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -3,6 +3,6 @@
     "message": "SciBard"
   },
   "appDesc": {
-    "message": "Summarize a scientific paper on journal's websites and provide key insights using ChatGPT."
+    "message": "Summarize a scientific paper on journal's websites and provide key insights using BARD."
   }
 }
