--- a/src/_locales/ko/messages.json
+++ b/src/_locales/ko/messages.json
@@ -3,6 +3,6 @@
     "message": "SciBard"
   },
   "appDesc": {
-    "message": "ChatGPT로 Arxiv논문의 인사이트를 제공합니다."
+    "message": "BARD로 Arxiv논문의 인사이트를 제공합니다."
   }
 }
