--- a/src/_locales/hu/messages.json
+++ b/src/_locales/hu/messages.json
@@ -1,8 +1,8 @@
 {
-  "appName": {
-    "message": "SciBard"
-  },
-  "appDesc": {
-    "message": "Összegzés és kulcsfontosságú betekintések bármely cikkre"
-  }
+    "appName": {
+        "message": "SciGemini - Gemini™ for Scientists"
+    },
+    "appDesc": {
+        "message": "Összefoglaljon egy tudományos cikket a folyóirat webhelyeiről, és nyújtson betekintést a Google™ Gemini™ segítségével"
+    }
 }
