--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -1,8 +1,8 @@
 {
-  "appName": {
-    "message": "SciBard"
-  },
-  "appDesc": {
-    "message": "Résumer et fournir des éclairages clés pour un article."
-  }
+    "appName": {
+        "message": "SciGemini - Gemini™ for Scientists"
+    },
+    "appDesc": {
+        "message": "Résumez un article scientifique sur les sites Web d'une revue et fournissez des informations clés à l'aide de Google™ Gemini™"
+    }
 }
