--- a/src/_locales/ro/messages.json
+++ b/src/_locales/ro/messages.json
@@ -1,8 +1,8 @@
 {
-  "appName": {
-    "message": "SciBard"
-  },
-  "appDesc": {
-    "message": "Rezumați și oferiți perspectivă cheie pentru orice articol arxiv"
-  }
+    "appName": {
+        "message": "SciGemini - Gemini™ for Scientists"
+    },
+    "appDesc": {
+        "message": "Rezumați o lucrare științifică pe site-urile web ale revistei și furnizați informații cheie folosind Google™ Gemini™"
+    }
 }
