--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -1,8 +1,8 @@
 {
-  "appName": {
-    "message": "SciBard"
-  },
-  "appDesc": {
-    "message": "Суммировать и предоставлять ключевые взгляды для любой статьи"
-  }
+    "appName": {
+        "message": "SciGemini - Gemini™ для ученых"
+    },
+    "appDesc": {
+        "message": "Обобщите научную статью на веб-сайтах журнала и предоставьте ключевые идеи с помощью Google™ Gemini™"
+    }
 }
