--- a/src/_locales/sv/messages.json
+++ b/src/_locales/sv/messages.json
@@ -3,6 +3,6 @@
         "message": "SciGemini - Gemini™ for Scientists"
     },
     "appDesc": {
-        "meddelande": "Sammanfatta en vetenskaplig artikel om tidskriftens webbplatser och ge viktiga insikter med Google™ Gemini™"
+        "message": "Sammanfatta en vetenskaplig artikel om tidskriftens webbplatser och ge viktiga insikter med Google™ Gemini™"
     }
 }
