--- a/src/_locales/ml/messages.json
+++ b/src/_locales/ml/messages.json
@@ -3,7 +3,6 @@
         "message": "SciGemini - Gemini™ for Scientists"
     },
     "appDesc": {
-        "message": "ജേണലിൻ്റെ വെബ്‌സൈറ്റുകളിൽ ഒരു ശാസ്ത്രീയ പ്രബന്ധം സംഗ്രഹിക്കുകയും Google™ Gemini™"
-        ഉപയോ ഗി ച് ച് പ് രധാ ന സ് ഥി തി വി വരക് കണക് കു കൾ നൽകു കയും ചെയ് യു ക
+        "message": "ജേണലിൻ്റെ വെബ്‌സൈറ്റുകളിൽ ഒരു ശാസ്ത്രീയ പ്രബന്ധം സംഗ്രഹിക്കുകയും Google™ Gemini™ ഉപയോ ഗി ച് ച് പ് രധാ ന സ് ഥി തി വി വരക് കണക് കു കൾ നൽകു കയും ചെയ് യു ക"
     }
 }
